# contract-triage

./: .gitignore  APPROACH.md  PLAN.md  README.md  requirements.txt  skills-lock.json
app/: README.md  preview.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
eval/: REPORT.md  commentary.md  evaluate.py  results.json
outputs/misc_09_offer_letter/: misc_09_offer_letter_REDLINE.docx  misc_09_offer_letter_analysis.json  misc_09_offer_letter_reply_email.md  misc_09_offer_letter_triage.md
outputs/nda_01_borealis_clean/: nda_01_borealis_clean_REDLINE.docx  nda_01_borealis_clean_analysis.json  nda_01_borealis_clean_reply_email.md  nda_01_borealis_clean_triage.md
outputs/nda_02_helios_term_govlaw/: nda_02_helios_term_govlaw_REDLINE.docx  nda_02_helios_term_govlaw_analysis.json  nda_02_helios_term_govlaw_reply_email.md  nda_02_helios_term_govlaw_triage.md
outputs/nda_03_quantix_heavy_redline/: nda_03_quantix_heavy_redline_REDLINE.docx  nda_03_quantix_heavy_redline_analysis.json  nda_03_quantix_heavy_redline_reply_email.md  (+1 more)
playbook/: playbook.schema.json  playbook.yaml
samples/: misc_09_offer_letter.docx  nda_01_borealis_clean.docx  nda_02_helios_term_govlaw.docx  nda_03_quantix_heavy_redline.docx  nda_04_vantage_ip_grab.docx  of_01_atlas_clean.docx  of_02_northwind_payment_liability.docx
src/: analyzer.py  app_api.py  contract_texts.py  generate_documents.py  ingest.py  llm.py  pipeline.py  redline.py  run_all.py
templates/: nda_template.docx  order_form_template.docx
(+31 files in other folders)
